fixed Qty and Rate alignment

--- a/style.css
+++ b/style.css
@@ -53,8 +53,10 @@ header > div > p {
   align-items:end;
 }
 
-.box.justify-right.text-centered{
-  text-align: center;
+.box.wide-box{
+  width:130px;
+  justify-content: flex-start;
+  align-items:center;
 }
 
 .box-row {
